--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="assets/css/landing.css">
 		<link rel="stylesheet" href="assets/css/landing-card.css">
 		<link rel="stylesheet" href="assets/css/main.e1ae0bf9.css">
-		<link href="assets/css/styles.2eef0fd7.css" rel="stylesheet">
+		
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/header.css">
@@ -370,7 +370,7 @@
 					</div>
 					<p class="card-block-botton">Трудный выбор? Спроси мнение других пользователей</p>
 				</div>
-				<div class="card-block card-block-botton">
+				<div class="card-block card-block-link-botton">
 					<a class="card-block__link"  href="./ru/apps.html">Приложения SFERA &#8702; </a>
 				</div>
 			</div>
