--- a/index.html
+++ b/index.html
@@ -474,7 +474,8 @@
           </ul>
         </div>
         <div class="footer__download-links">
-          <h2 class="footer__title color_grey">Мы не будем менять мир.<br>Мы перепишем код.</h2>
+          <h2 class="footer__title color_grey">Мы не будем менять мир.<br> 
+Мы перепишем код.</h2>
           <ul class="footer__download-links-list">
             <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
             <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
@@ -482,19 +483,20 @@
         </div>
         <div class="footer__social-links">
           <ul class="socials-list">
-            <li class="socials-list__item"><a class="socials-list_type_youtube" href="#" title="Наш канал в Ютубе">YouTube</a></li>
-            <li class="socials-list__item"><a class="socials-list_type_tiktok" href="#" title="Мы в ТикТоке">TikTok </a></li>
-            <li class="socials-list__item"><a class="socials-list_type_vk" href="#" title="Мы ВКонтакте">VKontakte</a></li>
-            <li class="socials-list__item"><a class="socials-list_type_dzen" href="#" title="Мы Дзене">Дзен</a></li>
-            <li class="socials-list__item"><a class="socials-list_type_instagram" href="#" title="Наш Инстаграм">Instagram </a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_youtube" href="#" title="Наш канал в Ютубе">YouTube</a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_tiktok" href="#" title="Мы в ТикТоке">TikTok </a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="#" title="Мы ВКонтакте">VKontakte</a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href="#" title="Мы Дзене">Дзен</a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href="#" title="Наш Инстаграм">Instagram </a></li>
           </ul>
         </div>
-				<a href="" class="footer-top"><img src="./assets/img/arrow_upward_24px.svg" alt=""></a>
+        <a href="" class="footer-top"><img src="./assets/img/arrow_upward_24px.svg" alt=""></a>
         <div class="footer__copyright">
           <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">Положение SFERA</a></p>
           <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — Проект SFERA | Все права защищены ООО «СФЕРА»</p>
         </div>
-      </div></footer>
+      </div>
+    </footer>
 			<script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
 			<script src="/assets/js/index.js"></script>
 			<script src="assets/js/main.js"></script>
