--- a/en/downloads.html
+++ b/en/downloads.html
@@ -178,7 +178,7 @@
       </section>
     </main>
 
-    <footer class="footer section section_theme_dark" role="footer">
+    <!-- <footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
         <div class="footer__contacts">
           <h2 class="footer__title">Contacts</h2>
@@ -209,7 +209,7 @@
           <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">SFERA position</a></p>
           <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — SFERA Project | All rights reserved by SPHERE LLC</p>
         </div>
-      </div></footer>
+      </div></footer> -->
   <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
   <script src="assets/js/main.4.befb3660.js" defer></script>
   <script src="../assets/js/main.js"></script>
