--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -177,7 +177,7 @@
       </section>
     </main>
 
-    <footer class="footer section section_theme_dark" role="footer">
+    <!-- <footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
         <div class="footer__contacts">
           <h2 class="footer__title">Контакты</h2>
@@ -211,7 +211,7 @@
           <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — Проект SFERA | Все права защищены ООО «СФЕРА»</p>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </div>
   <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
   <script src="assets/js/main.4.befb3660.js" defer></script>
