--- a/en/team.html
+++ b/en/team.html
@@ -10,7 +10,6 @@
     <link rel="icon" href="assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
     <title>SFERA</title>
     <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
-    <link href="../assets/css/styles.bf66b643.css" rel="stylesheet">
     <link href="../assets/css/team.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../assets/css/header.css">
@@ -27,7 +26,7 @@
           <div class="block-logo">
             <div class="video-container">
               <span class="close">&#10006;</span>
-              <video class="video" src="./assets/video/video.mp4" controls></video>
+              <video class="video" src="../assets/video/video.mp4" controls></video>
             </div>
             <i class="button button_form_circle button_theme_image link_hide-text  video-player" ><span class="button__play-video">View a video about SFERA</span></i>
             <label class="logo">
@@ -112,13 +111,13 @@
               </svg>
               <span class="close_menu">&#10006;</span>
             </li>
-            <li class="nav_list-item"><a class="nav_list-link" href="#">SFERA Project</a></li>
-            <li class="nav_list-item"><a class="nav_list-link " href="./ru/apps.html">Applications</a></li>
-            <li class="nav_list-item"><a class="nav_list-link" href="./ru/downloads.html">Download SFERA</a></li>
-            <li class="nav_list-item"><a class="nav_list-link" href="./ru/news.html">News</a></li>
-            <li class="nav_list-item"><a class="nav_list-link" href="./ru/startups.html">Startups</a></li>
-            <li class="nav_list-item"><a class="nav_list-link" href="./ru/investment.html">Investment</a></li>
-            <li class="nav_list-item"><a class="nav_list-link active" href="./ru/team.html">Team</a></li>
+            <li class="nav_list-item"><a class="nav_list-link" href="../index.html">SFERA Project</a></li>
+        <li class="nav_list-item"><a class="nav_list-link" href="./../en/apps.html">Applications</a></li>
+        <li class="nav_list-item"><a class="nav_list-link" href="./../en/downloads.html">Download SFERA</a></li>
+        <li class="nav_list-item"><a class="nav_list-link" href="./../en/news.html">News</a></li>
+        <li class="nav_list-item"><a class="nav_list-link" href="./../en/startups.html">Startups</a></li>
+        <li class="nav_list-item"><a class="nav_list-link" href="./../en/investment.html">Investment</a></li>
+        <li class="nav_list-item active"><a class="nav_list-link" href="./../en/team.html">Team</a></li>
             <li class="download_button-tablet">
               <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="coloWhite button_download "><img src="assets/img/buttons/button-image.svg"> Download on Android</a>
               <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" coloWhite button_download "><img src="assets/img/buttons/button-apple.svg" >Download on iOS</a>
@@ -137,7 +136,7 @@
               <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">EN</a>
                 <div class="dropdown-menu__content langs__submenu">
                   <ul class="langs__list">
-                    <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">RU</a></li>
+                    <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/team.html">RU</a></li>
                     <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">CS</a></li>
                   </ul>
     
@@ -354,7 +353,6 @@
   </div>
 
     <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
-    <script src="assets/js/main.8.994d9368.js" defer></script>
     <script src="../assets/js/main.js"></script>
 </body>
 
