--- a/ru/investment.html
+++ b/ru/investment.html
@@ -111,7 +111,7 @@
             </svg>
             <span class="close_menu">&#10006;</span>
           </li>
-          <li class="nav_list-item "><a class="nav_list-link " href="../index.html">Главная</a></li>
+          <li class="nav_list-item "><a class="nav_list-link " href="../ru/index.html">Главная</a></li>
           <li class="nav_list-item"><a class="nav_list-link " href="../ru/apps.html">Приложения</a></li>
           <li class="nav_list-item"><a class="nav_list-link" href="../ru/downloads.html">Скачать</a></li>
           <li class="nav_list-item"><a class="nav_list-link" href="../ru/news.html">Новости</a></li>
@@ -137,7 +137,7 @@
           <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
             <div class="dropdown-menu__content langs__submenu">
               <ul class="langs__list">
-                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">EN</a></li>
+                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/investment.html">EN</a></li>
                 <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">CS</a></li>
               </ul>
             </div>
