--- a/ru/apps.html
+++ b/ru/apps.html
@@ -114,13 +114,13 @@
                       </svg>
                       <span class="close_menu">&#10006;</span>
                   </li>
-                  <li class="nav_list-item "><a class="nav_list-link " href="../index.html">Главная</a></li>
-                  <li class="nav_list-item active"><a class="nav_list-link " href="#">Приложения</a></li>
-                  <li class="nav_list-item"><a class="nav_list-link" href="../ru/downloads.html">Скачать</a></li>
-                  <li class="nav_list-item"><a class="nav_list-link" href="../ru/news.html">Новости</a></li>
-                  <li class="nav_list-item"><a class="nav_list-link" href="../ru/startups.html">Стартапам</a></li>
-                  <li class="nav_list-item"><a class="nav_list-link" href="../ru/investment.html">Инвестиции</a></li>
-                  <li class="nav_list-item"><a class="nav_list-link" href="../ru/team.html">Команда</a></li>
+                  <li class="nav_list-item"><a class="nav_list-link " href="./../ru/index.html">Главная</a></li>
+						<li class="nav_list-item active"><a class="nav_list-link " href="#">Приложения</a></li>
+						<li class="nav_list-item"><a class="nav_list-link" href="./../ru/downloads.html">Скачать</a></li>
+						<li class="nav_list-item"><a class="nav_list-link" href="./../ru/news.html">Новости</a></li>
+						<li class="nav_list-item"><a class="nav_list-link" href="./../ru/startups.html">Стартапам</a></li>
+						<li class="nav_list-item"><a class="nav_list-link" href="./../ru/investment.html">Инвестиции</a></li>
+						<li class="nav_list-item"><a class="nav_list-link" href="./../ru/team.html">Команда</a></li>
                   <li class="download_button-tablet">
                       <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="colorWhite button_download "><img src="/assets/img/buttons/button-image.svg"> Скачать на Android </a>
                       <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" colorWhite button_download "><img src="/assets/img/buttons/button-apple.svg" >Скачать на iOS</a>
@@ -140,7 +140,7 @@
                   <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
                       <div class="dropdown-menu__content langs__submenu">
                           <ul class="langs__list">
-                              <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">EN</a></li>
+                              <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/apps.html">EN</a></li>
                               <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">CS</a></li>
                           </ul>
                       </div>
