--- a/en/apps.html
+++ b/en/apps.html
@@ -416,7 +416,7 @@
               </div>
         </section>
         <section class="section apps__future">
-            <h2 class="section__title align_wiper">services of the second stage of development</h2>
+            <h2 class="section__title align_wiper">SERVICES OF THE SECOND STAGE OF DEVELOPMENT</h2>
             <div class="swiper">
                 <div class="swiper-wrapper apps__future-slide">
                     <div class="swiper-slide">
