--- a/en/investment.html
+++ b/en/investment.html
@@ -278,7 +278,7 @@
       </div></footer>
   </div>
   <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
-  <script src="../assets/js/invest.js"></script>
+  <script src="../assets/js/invesr.en.js"></script>
   <script src="../assets/js/main.js"></script>
 </body>
 
