lang in tablet header
lang in tablet header

--- a/en/startups.html
+++ b/en/startups.html
@@ -119,6 +119,17 @@
         <li class="nav_list-item active"><a class="nav_list-link" href="./../en/startups.html">Startups</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/investment.html">Investment</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/team.html">Team</a></li>
+        <li class="lang_tablet" >
+          <div class="img_lang">
+            <img class="img_lang-tablet" src="../assets/img/language_tablet.png" alt="">
+          </div>
+          <div class="list_lang-tablet">
+            <a class="lang_list-link active" href="#"> English</a>
+            <a class="lang_list-link" href="../ru/startups.html">Russian</a>
+            <a class="lang_list-link" href="">Ceština</a>
+          </div>
+
+        </li>
         <li class="download_button-tablet">
           <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="coloWhite button_download "><img src="assets/img/buttons/button-image.svg"> Download on Android</a>
           <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" coloWhite button_download "><img src="assets/img/buttons/button-apple.svg" >Download on iOS</a>
