--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 		<link rel="stylesheet" href="assets/css/landing.css">
 		<link rel="stylesheet" href="assets/css/landing-card.css">
 		<link rel="stylesheet" href="assets/css/main.e1ae0bf9.css">
-		<link href="assets/css/styles.2eef0fd7.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/header.css">
@@ -121,6 +120,17 @@
 					<li class="nav_list-item"><a class="nav_list-link" href="./en/startups.html">Startups</a></li>
 					<li class="nav_list-item"><a class="nav_list-link" href="./en/investment.html">Investment</a></li>
 					<li class="nav_list-item"><a class="nav_list-link" href="./en/team.html">Team</a></li>
+					<li class="lang_tablet" >
+						<div class="img_lang">
+							<img class="img_lang-tablet" src="./assets/img/language_tablet.png" alt="">
+						</div>
+						<div class="list_lang-tablet">
+							<a class="lang_list-link active" href="#"> English</a>
+							<a class="lang_list-link" href="./ru/index.html">Russian</a>
+							<a class="lang_list-link" href="./cs/index.html">Ceština</a>
+						</div>
+
+					</li>
 					<li class="download_button-tablet">
 						<a href="https://play.google.com/store/apps/details?id=zone.sfera" class="coloWhite button_download "><img src="assets/img/buttons/button-image.svg"> Download on Android</a>
 						<a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" coloWhite button_download "><img src="assets/img/buttons/button-apple.svg" >Download on iOS</a>
