--- a/ru/index.html
+++ b/ru/index.html
@@ -118,9 +118,20 @@
 						<li class="nav_list-item"><a class="nav_list-link" href="./../ru/startups.html">Стартапам</a></li>
 						<li class="nav_list-item"><a class="nav_list-link" href="./../ru/investment.html">Инвестиции</a></li>
 						<li class="nav_list-item"><a class="nav_list-link" href="./../ru/team.html">Команда</a></li>
+						<li class="lang_tablet" >
+							<div class="img_lang">
+								<img class="img_lang-tablet" src="../assets/img/language_tablet.png" alt="">
+							</div>
+							<div class="list_lang-tablet">
+								<a class="lang_list-link active" href=""> Русский</a>
+								<a class="lang_list-link" href="../index.html">Английский</a>
+								<a class="lang_list-link" href="">Чешский</a>
+							</div>
+
+						</li>
 						<li class="download_button-tablet">
-							<a href="https://play.google.com/store/apps/details?id=zone.sfera" class="colorWhite button_download "><img src="assets/img/buttons/button-image.svg"> Скачать на Android </a>
-							<a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" colorWhite button_download "><img src="assets/img/buttons/button-apple.svg" >Скачать на iOS</a>
+							<a href="https://play.google.com/store/apps/details?id=zone.sfera" class="colorWhite button_download "><img src="/assets/img/buttons/button-image.svg"> Скачать на Android </a>
+							<a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" colorWhite button_download "><img src="/assets/img/buttons/button-apple.svg" >Скачать на iOS</a>
 						</li>
 						<li class="link_tablet-menu" >
 							<a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
