--- a/en/team.html
+++ b/en/team.html
@@ -111,16 +111,27 @@
               </svg>
               <span class="close_menu">&#10006;</span>
             </li>
-            <li class="nav_list-item"><a class="nav_list-link" href="../index.html">SFERA Project</a></li>
-        <li class="nav_list-item"><a class="nav_list-link" href="./../en/apps.html">Applications</a></li>
-        <li class="nav_list-item"><a class="nav_list-link" href="./../en/downloads.html">Download SFERA</a></li>
-        <li class="nav_list-item"><a class="nav_list-link" href="./../en/news.html">News</a></li>
-        <li class="nav_list-item"><a class="nav_list-link" href="./../en/startups.html">Startups</a></li>
-        <li class="nav_list-item"><a class="nav_list-link" href="./../en/investment.html">Investment</a></li>
-        <li class="nav_list-item active"><a class="nav_list-link" href="./../en/team.html">Team</a></li>
+                 <li class="nav_list-item"><a class="nav_list-link" href="../index.html">SFERA Project</a></li>
+                 <li class="nav_list-item"><a class="nav_list-link" href="./../en/apps.html">Applications</a></li>
+                 <li class="nav_list-item"><a class="nav_list-link" href="./../en/downloads.html">Download SFERA</a></li>
+                 <li class="nav_list-item"><a class="nav_list-link" href="./../en/news.html">News</a></li>
+                 <li class="nav_list-item"><a class="nav_list-link" href="./../en/startups.html">Startups</a></li>
+                 <li class="nav_list-item"><a class="nav_list-link" href="./../en/investment.html">Investment</a></li>
+                 <li class="nav_list-item active"><a class="nav_list-link" href="./../en/team.html">Team</a></li>
+                 <li class="lang_tablet" >
+                     <div class="img_lang">
+                         <img class="img_lang-tablet" src="../assets/img/language_tablet.png" alt="">
+                     </div>
+                     <div class="list_lang-tablet">
+                         <a class="lang_list-link active" href="#"> English</a>
+                         <a class="lang_list-link" href="../ru/team.html">Russian</a>
+                         <a class="lang_list-link" href="">Ceština</a>
+                     </div>
+
+                 </li>
             <li class="download_button-tablet">
-              <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="coloWhite button_download "><img src="assets/img/buttons/button-image.svg"> Download on Android</a>
-              <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" coloWhite button_download "><img src="assets/img/buttons/button-apple.svg" >Download on iOS</a>
+              <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="coloWhite button_download "><img src="/assets/img/buttons/button-image.svg">Download on Android</a>
+              <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" coloWhite button_download "><img src="/assets/img/buttons/button-apple.svg" >Download on iOS</a>
             </li>
             <li class="link_tablet-menu" >
               <a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
